add consumer API
