# dashboard/src/api/schema/consumers.ts
@@ -1,8 +1,31 @@
 import request from '@/utils/request'
 
-export const getRoles = (params: any) =>
+type ConsumerType = {
+  username: string
+  plugins?: object
+}
+
+export const updateOrCreate = (params: ConsumerType) =>
   request({
-    url: '/roles',
-    method: 'get',
+    url: '/consumers',
+    method: 'PUT',
     params
+  })
+
+export const getList = () =>
+request({
+  url: '/consumers',
+  method: 'GET'
+})
+
+export const get = (username: string) =>
+  request({
+    url: `/consumers/${username}`,
+    method: 'GET'
+  })
+
+export const remove = (username: string) =>
+  request({
+    url: `/consumers/${username}`,
+    method: 'DELETE'
   })
